fixing firefox overflow CSS issue

--- a/frontend/src/components/skills/Skills.less
+++ b/frontend/src/components/skills/Skills.less
@@ -33,10 +33,13 @@
 
     .skills-card-meta {
       font-weight: 700;
-      font-size: 18px;
       letter-spacing: 2px;
       text-align: center;
       text-transform: uppercase;
+
+      .for-size(tablet-up; {
+        font-size: 18px;
+      });
     }
   }
 }
